--- a/app/src/main/res/layout/activitymap_main.xml
+++ b/app/src/main/res/layout/activitymap_main.xml
@@ -7,13 +7,23 @@
     android:background="@android:color/holo_blue_light"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView51"
+        android:layout_width="1091dp"
+        android:layout_height="1707dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/map_haikei" />
+
     <Button
         android:id="@+id/button01"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/redbutton"
         android:text="@string/f1"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,9 +33,9 @@
         android:id="@+id/button02"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/silverbutton"
         android:text="@string/f2"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/button01"
@@ -35,9 +45,9 @@
         android:id="@+id/button03"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/purplebutton"
         android:text="@string/f3"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +57,9 @@
         android:id="@+id/button04"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/greenbutton"
         android:text="@string/f4"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/button03"
@@ -59,9 +69,9 @@
         android:id="@+id/button05"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/yellowbutton"
         android:text="@string/f5"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +81,9 @@
         android:id="@+id/button06"
         android:layout_width="321dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/orangebutton"
         android:text="@string/f6"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/button05"
@@ -98,13 +108,12 @@
         android:layout_width="941dp"
         android:layout_height="66dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/menu"
-        android:textColor="@color/color01"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="36sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
