--- a/app/src/main/res/layout/webactivity.xml
+++ b/app/src/main/res/layout/webactivity.xml
@@ -8,14 +8,13 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_width="642dp"
+        android:layout_width="589dp"
         android:layout_height="805dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.964">
 
     </WebView>
 
@@ -44,5 +43,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/button_更新"
+        android:layout_width="144dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="4dp"
+        android:text="更新"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toStartOf="@+id/button_問題描く"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
